--- a/MIT_18.650-Fall-2016/requirements.txt
+++ b/MIT_18.650-Fall-2016/requirements.txt
@@ -12,18 +12,22 @@ certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.2
 comm==0.2.2
+contourpy==1.3.0
+cycler==0.12.1
 debugpy==1.8.14
 decorator==5.2.1
 defusedxml==0.7.1
 exceptiongroup==1.3.0
 executing==2.2.0
 fastjsonschema==2.21.1
+fonttools==4.58.0
 fqdn==1.5.1
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 importlib_metadata==8.7.0
+importlib_resources==6.5.2
 ipykernel==6.29.5
 ipython==8.18.1
 ipywidgets==8.1.7
@@ -46,7 +50,9 @@ jupyterlab==4.4.3
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.15
+kiwisolver==1.4.7
 MarkupSafe==3.0.2
+matplotlib==3.9.4
 matplotlib-inline==0.1.7
 mistune==3.1.3
 nbclient==0.10.2
@@ -55,11 +61,13 @@ nbformat==5.10.4
 nest-asyncio==1.6.0
 notebook==7.4.2
 notebook_shim==0.2.4
+numpy==2.0.2
 overrides==7.7.0
 packaging==25.0
 pandocfilters==1.5.1
 parso==0.8.4
 pexpect==4.9.0
+pillow==11.2.1
 platformdirs==4.3.8
 prometheus_client==0.22.0
 prompt_toolkit==3.0.51
@@ -68,6 +76,7 @@ ptyprocess==0.7.0
 pure_eval==0.2.3
 pycparser==2.22
 Pygments==2.19.1
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-json-logger==3.3.0
 PyYAML==6.0.2
@@ -77,6 +86,7 @@ requests==2.32.3
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.25.1
+scipy==1.13.1
 Send2Trash==1.8.3
 six==1.17.0
 sniffio==1.3.1
